WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187054
[Mac] AirPlay picker uses incorrect theme in Dark mode
https://bugs.webkit.org/show_bug.cgi?id=187054
Summary
[Mac] AirPlay picker uses incorrect theme in Dark mode
Eric Carlson
Reported
2018-06-26 10:49:24 PDT
AirPlay picker uses incorrect theme in Dark mode
Attachments
Patch
(13.43 KB, patch)
2018-06-26 11:06 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2018-06-26 10:49:58 PDT
<
rdar://problem/41291093
>
Eric Carlson
Comment 2
2018-06-26 11:06:44 PDT
Created
attachment 343623
[details]
Patch
WebKit Commit Bot
Comment 3
2018-06-26 11:32:30 PDT
Comment on
attachment 343623
[details]
Patch Rejecting
attachment 343623
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'apply-attachment', '--no-update', '--non-interactive', 343623, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit contributors.json is malformed: Expecting property name enclosed in double quotes: line 166 column 4 (char 3586) Full output:
https://webkit-queues.webkit.org/results/8349438
WebKit Commit Bot
Comment 4
2018-06-26 12:14:43 PDT
Comment on
attachment 343623
[details]
Patch Clearing flags on attachment: 343623 Committed
r233214
: <
https://trac.webkit.org/changeset/233214
>
WebKit Commit Bot
Comment 5
2018-06-26 12:14:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug