[Mac] AirPlay picker uses incorrect theme in Dark mode https://bugs.webkit.org/show_bug.cgi?id=187054 <rdar://problem/41291093>

Reviewed by Timothy Hatcher.

Source/WebCore:

* Modules/mediasession/WebMediaSessionManager.cpp:
(WebCore::WebMediaSessionManager::showPlaybackTargetPicker): Add useDefaultAppearance parameter.
* Modules/mediasession/WebMediaSessionManager.h:

* platform/graphics/MediaPlaybackTargetPicker.cpp:
(WebCore::MediaPlaybackTargetPicker::showPlaybackTargetPicker): Ditto.
* platform/graphics/MediaPlaybackTargetPicker.h:

* platform/graphics/avfoundation/objc/MediaPlaybackTargetPickerMac.h:
* platform/graphics/avfoundation/objc/MediaPlaybackTargetPickerMac.mm:
(WebCore::MediaPlaybackTargetPickerMac::showPlaybackTargetPicker): Choose theme based on
useDefaultAppearance parameter.

* platform/mock/MediaPlaybackTargetPickerMock.cpp:
(WebCore::MediaPlaybackTargetPickerMock::showPlaybackTargetPicker): Log parameter.
* platform/mock/MediaPlaybackTargetPickerMock.h:

Source/WebKit:

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::showPlaybackTargetPicker): Pass m_defaultAppearance.

Source/WebKitLegacy/mac:

* WebView/WebMediaPlaybackTargetPicker.mm:
(WebMediaPlaybackTargetPicker::showPlaybackTargetPicker): Pass page->defaultAppearance().


Canonical link: https://commits.webkit.org/202305@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233214 268f45cc-cd09-0410-ab3c-d52691b4dbfc